--- a/partials/header.html
+++ b/partials/header.html
@@ -1,4 +1,5 @@
 <header id="site-header" data-fragment="header" class="site-header">
+  <a class="skip-link" href="#main-content">Skip to main content</a>
   <div class="container">
     <nav class="main-nav" aria-label="Main navigation">
       <a class="brand" href="#" aria-label="Belkins home">
