Add industries page and share testimonials partial

--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -117,7 +117,7 @@
           <h3 class="footer-column__title">Solutions</h3>
           <ul class="footer-links">
             <li><a href="#">Services &amp; solutions</a></li>
-            <li><a href="#">Industries</a></li>
+            <li><a href="industries.html">Industries</a></li>
             <li><a href="#">Case studies</a></li>
           </ul>
         </div>
