--- a/docs/partials/header.html
+++ b/docs/partials/header.html
@@ -19,7 +19,7 @@
       </button>
       <div class="nav-links" id="primary-navigation">
         <a href="#">Services &amp; solutions</a>
-        <a href="#">Industries</a>
+        <a href="industries.html">Industries</a>
         <a href="#">Case studies</a>
         <a href="#">About</a>
         <a href="#">Pricing</a>
