Restore header and footer fragments

--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -1,4 +1,4 @@
-<footer id="site-footer" data-fragment="footer" class="site-footer" aria-labelledby="footer-heading">
+<footer class="site-footer" aria-labelledby="footer-heading">
   <h2 id="footer-heading" class="sr-only">Site footer</h2>
   <div class="site-footer__surface">
     <div class="container">
