--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="footer-callout">
         <div class="footer-callout__content">
-          <a class="brand brand--footer" href="#" aria-label="Belkins home">
+          <a class="brand brand--footer" href="index.html" aria-label="Belkins home">
             <span class="brand-icon" aria-hidden="true"></span>
             <span class="brand-text">belkins</span>
           </a>
@@ -18,7 +18,7 @@
     <div class="container footer-main">
       <div class="footer-grid">
         <div class="footer-column footer-column--brand">
-          <a class="brand brand--footer" href="#" aria-label="Belkins home">
+          <a class="brand brand--footer" href="index.html" aria-label="Belkins home">
             <span class="brand-icon" aria-hidden="true"></span>
             <span class="brand-text">belkins</span>
           </a>
